Update orders module: get front-end done for order editing.\nFound many bugs in original system and many bugs which not fit in the new system, but don't have enough time to fix all these XX bugs.

--- a/src/main/webapp/static/css/manager.css
+++ b/src/main/webapp/static/css/manager.css
@@ -1423,7 +1423,7 @@ body .fc { /* extra precedence to overcome jqui */
 .dialog-photo {
   background-color: #CCCCCC;
   width: 155px;
-  height: 180px;
+  height: 220px;
   margin: 0 10px 10px 10px;
 }
 
@@ -1446,5 +1446,5 @@ body .fc { /* extra precedence to overcome jqui */
 }
 
 .dialog-row {
-  margin: 6px;
+  margin: 4px 6px 4px 6px;
 }
